# grapic

./: .gitignore  .gitmodules  AUTHORS .md  CMakeLists.txt  Grapic.h  LICENSE.md  Makefile  README.md  grapic.lua  lifami-cb17.bat  lifami-cb20.bat  lifami.bat  lifami.lua  premake-cb17.bat  premake-cb20.bat  premake-visual.bat  premake-vs2015.bat  premake-vs2019.bat  premake-vs2023.bat  premake-vscode.bat  premake.bat  premake4.lua  premake5.lua  run-lifami-cb20-linux.sh  run-lifami-cb20.bat  run-premake-cb20.bat  run-premake-macos.sh  xmake.lua
apps/: CMakeLists.txt
apps/LIFAP1/: LIFAP1_TP3.cpp  LIFAPI_TP.cpp  main_LIFAP1_TP3.cpp
apps/LIFAPI/: LIFAPI_TP.cpp
apps/demo_checkers/: main_checkers.cpp
apps/demo_minesweeper/: main_minesweeper.cpp
apps/demo_pacman/: Jeu.cpp  Jeu.h  Pacman.cpp  Pacman.h  Terrain.cpp  Terrain.h  main_pacman.cpp
apps/demo_path_tracer/: main.cpp
apps/demo_tetris/: main_tetris.cpp
apps/start/: main_start.cpp
apps/tutorials/: tuto1_Simple.cpp  tuto2_FirstLoop.cpp  tuto3_Drawing.cpp  tuto4_Keyboard.cpp  tuto5_Mouse.cpp  tuto6_Menu.cpp  tuto7_Animation.cpp  tuto8_Plot.cpp  tuto8b_Plot.cpp  tuto9_Demo.cpp  tuto9_Image.cpp
data/lifami_polygon/: poly2.h
data/lifami_td2/: poly1.h  poly3.h  poly4.h  temperatureInit.h
data/zzz_lifami_td2/: poly1.h  poly2.h  poly4.h
doc/: Doxyfile  DoxygenLayout.xml  VERSION.html  index.html
doc/images/: montage_images.pptx
script/: inc_version.sh  lifami.lua  make_lifami.sh  make_linux_test.sh  make_web.sh  make_zip.sh  premake4.linux  premake4.linux.sh  premake4.macosx  premake5.linux  premake5.linux.sh  remove_correction.cpp  run-premake-vs2022.bat  run-premake-vs2023.bat  run-premake-vscode.bat  scp_script_toWeb.txt  scp_script_toWeb.txt.old  sessionWork.bat
script/cmake/: CMakeLists.txt  README.md
src/: CMakeLists.txt  Grapic.cpp  Grapic.h
